Complete implementing show group